# access

./: .gitignore  Portsmouth.ipynb  README.md  Worcester.ipynb  main.py  pyproject.toml
examples/Cities/Cambridge/Data/: building_entrances.geojson  sidewalks.geojson  subway.geojson
examples/Cities/Somerville/Data/: CensusBlock.geojson  access_pairings.csv  amenities.geojson  bus.geojson  institutions.geojson  pairings.csv  parks.geojson  parks.geojson:Zone.Identifier  subway.geojson
