[project]
name = "access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "madina>=0.0.15",
    "networkx>=3.5",
    "pandas>=2.3.1",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.uv.sources]
madina = { index = "testpypi" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
