[project]
name = "access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geoalchemy>=0.7.2",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "madina>=0.0.15",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "psycopg-binary>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.uv.sources]
madina = { index = "testpypi" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
